--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@react-native-community/hooks": "^3.0.0",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.13",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
