--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-web": "~0.19.6",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "expo-image-picker": "~14.3.2",
+    "expo-permissions": "~14.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
