--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-web": "~0.19.6",
     "yup": "^0.28.5",
     "expo-image-picker": "~14.3.2",
-    "expo-permissions": "~14.2.1"
+    "expo-permissions": "~14.2.1",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
