--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "^49.0.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.19",
     "formik": "^2.1.4",
@@ -19,11 +24,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "yup": "^0.28.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-permissions": "~14.2.1",
-    "expo-location": "~16.1.0"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
