--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "~19.0.1",
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^49.0.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
+    "expo": "^51.0.14",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "^0.25.17",
     "formik": "^2.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
+    "react-native": "^0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-web": "^0.19.12",
     "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.7"
   },
   "private": true
 }
