--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "^0.25.17",
+    "expo-updates": "~0.25.17",
     "formik": "^2.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "react-native-web": "^0.19.12",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
     "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
