--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^51.0.14",
-    "expo-image-picker": "~15.0.5",
+    "expo": "^51.0.16",
+    "expo-image-picker": "^15.0.6",
     "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.17",
+    "expo-updates": "^0.25.18",
     "formik": "^2.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
