--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "apisauce": "^3.0.1",
     "axios": "^1.7.2",
     "expo": "^51.0.16",
+    "expo-blur": "~13.0.2",
     "expo-image-picker": "^15.0.6",
     "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
@@ -23,15 +26,18 @@
     "expo-updates": "^0.25.18",
     "formik": "^2.1.4",
     "lottie-react-native": "^6.7.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "expo-image": "~1.12.12"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
