--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10",
-    "yup": "^0.28.5",
-    "expo-image": "~1.12.12"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
