--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "expo-image-picker": "^15.0.6",
     "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "^0.25.18",
     "formik": "^2.1.4",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
