--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/native-stack": "^6.9.26",
     "apisauce": "^3.0.1",
     "axios": "^1.7.2",
+    "color": "^4.2.3",
+    "color-convert": "^2.0.1",
+    "deepmerge": "^4.3.1",
     "expo": "^51.0.16",
     "expo-blur": "~13.0.2",
     "expo-image": "~1.12.12",
@@ -24,9 +27,11 @@
     "expo-location": "~17.0.1",
     "expo-permissions": "~14.2.1",
     "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "^0.25.18",
     "formik": "^2.1.4",
+    "is-mergeable-object": "^1.1.1",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
