--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,14 +22,17 @@
     "deepmerge": "^4.3.1",
     "expo": "^51.0.16",
     "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-image": "~1.12.12",
     "expo-image-picker": "^15.0.6",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.10",
     "expo-permissions": "~14.2.1",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "^0.25.18",
+    "expo-updates": "~0.25.20",
     "formik": "^2.1.4",
     "is-mergeable-object": "^1.1.1",
     "jwt-decode": "^4.0.0",
