--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "donewithit",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
+    "icon": "./app/assets/test_logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./app/assets/splash.png",
@@ -15,12 +15,16 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/d43093ef-5c76-4a60-8070-2866431a320f"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "description": "A marketplace for selling the stuff don't need anymore.",
-    "notification": { "iosDisplayInForeground": true },
+    "notification": {
+      "iosDisplayInForeground": true
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/splash.png",
@@ -29,12 +33,18 @@
       "package": "com.atakanb.DoneWithIt"
     },
     "web": {
-      "favicon": "./app/assets/favicon.png"
+      "favicon": "./app/assets/test_logo.png"
     },
-    "plugins": ["expo-secure-store"],
+    "plugins": [
+      "expo-secure-store",
+      "@bugsnag/plugin-expo-eas-sourcemaps"
+    ],
     "extra": {
       "eas": {
         "projectId": "ec47c2e8-06c1-47f0-96ab-8f9801174867"
+      },
+      "bugsnag": {
+        "apiKey": "9309e645bca4c80e4943f78dae8a5efd"
       }
     },
     "runtimeVersion": {
