--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bugsnag/expo": "^51.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/netinfo": "11.3.1",
@@ -48,10 +49,13 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.10",
+    "sharp-cli": "^5.0.0",
     "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "@bugsnag/plugin-expo-eas-sourcemaps": "^51.0.0",
+    "@bugsnag/source-maps": "^2.3.3"
   },
   "private": true
 }
